--- a/package.json
+++ b/package.json
@@ -134,10 +134,13 @@
     "@angular/platform-browser": "~2.2.0",
     "@angular/platform-browser-dynamic": "~2.2.0",
     "@angular/router": "~3.2.0",
-    "intl": "^1.2.5",
     "core-js": "^2.4.1",
+    "intl": "^1.2.5",
+    "jquery": "^3.1.1",
+    "owl.carousel": "^2.2.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "slick-carousel": "^1.6.0",
     "systemjs": "0.19.40",
     "zone.js": "0.6.25"
   }
