--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "core-js": "^2.4.1",
     "intl": "^1.2.5",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.2",
     "owl.carousel": "^2.2.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
